more modal work

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Accounting 101</h5>
+                    <h5 class="modal-title">Principles of Accounting I</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -318,7 +318,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Accounting 102</h5>
+                    <h5 class="modal-title">Managerial Accounting</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -348,7 +348,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Computer Information Sciences 110</h5>
+                    <h5 class="modal-title">Introduction to Computer Programming</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -372,7 +372,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Computer Information Sciences 120</h5>
+                    <h5 class="modal-title">Programming Languages and Techniques I</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -386,6 +386,9 @@
                         any language (for instance Java, C, C++, VB, Python, Perl, or Scheme) is fine. If you have never 
                         programmed before, you should take CIS 110 first.
                     </p>
+                    <p>
+                        CIS 110 recommended first
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -397,7 +400,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Computer Information Sciences 121</h5>
+                    <h5 class="modal-title">Programming Languages and Technigues II</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -413,6 +416,9 @@
                         in real-world applications. A large project introducing students to the challenges of software 
                         engineering concludes the course.
                     </p>
+                    <p>
+                        Pre-Reqs: CIS 120, CIS 160
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -424,7 +430,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Computer Information Sciences 160</h5>
+                    <h5 class="modal-title">Mathematical Foundations of Computer Science</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -435,6 +441,9 @@
                         This course provides an introduction to proof principles and logics, functions and relations, 
                         induction principles, combinatorics and graph theory, as well as a rigorous grounding in writing 
                         and reading mathematical proofs.
+                    </p>
+                    <p>
+                        Corequisite: CIS 120
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -447,7 +456,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Economics 010</h5>
+                    <h5 class="modal-title">Introduction to Economics for Business</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -471,7 +480,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Finance 100</h5>
+                    <h5 class="modal-title">Corporate Finance</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -484,6 +493,9 @@
                         techniques; 2) uncertainty and the trade-off between risk and return; 3) security market 
                         efficiency; 4) optimal capital structure, and 5) dividend policy decisions. 
                     </p>
+                    <p>
+                        Pre-Reqs:ECON 010 or ECON 001 or ECON 002, MATH 104, or MATH 110, ACCT 101 and STAT 101. Acct 101 and Stat 101 may be taken concurrently.
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -495,13 +507,17 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Finance 101</h5>
+                    <h5 class="modal-title">FMonetary Economics and the Global Economy</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Very long go on their website</p>
+                    <p>Very long go on their <a href="https://catalog.upenn.edu/undergraduate/courses/fnce/">website</a></p>
+                    <p>
+                        Pre-Reqs:ECON 010 or ECON 001 and ECON 002 and MATH 104 or MATH 110. 
+                        Students cannot receive credit for both FNCE 101 and ECON 102. WHARTON STUDENTS ARE REQUIRED TO TAKE FNCE 101
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -513,13 +529,17 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
+                    <h5 class="modal-title">Calculus, Part I</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Modal body text goes here.</p>
+                    <p>
+                        Brief review of High School calculus, applications of integrals, transcendental functions, 
+                        methods of integration, infinite series, Taylor's theorem, and first order ordinary 
+                        differential equations. Use of symbolic manipulation and graphics software in calculus.
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -531,7 +551,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Statistics 101</h5>
+                    <h5 class="modal-title">Introductory Business Statistics</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -555,7 +575,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Statistics 102</h5>
+                    <h5 class="modal-title">Introductory Business Statistics</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -564,6 +584,9 @@
                     <p>
                         Continuation of STAT 101. A thorough treatment of multiple regression, model selection, 
                         analysis of variance, linear logistic regression; introduction to time series. Business applications.
+                    </p>
+                    <p>
+                        Pre-Reqs:STAT 101
                     </p>
                 </div>
                 <div class="modal-footer">
