--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
     <!--Modals-->
     <div class="modal" tabindex="-1" role="dialog" id="acct101Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Principles of Accounting I</h5>
@@ -315,7 +315,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="acct102Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Managerial Accounting</h5>
@@ -345,7 +345,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="cis110Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Introduction to Computer Programming</h5>
@@ -369,7 +369,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="cis120Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Programming Languages and Techniques I</h5>
@@ -397,7 +397,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="cis121Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Programming Languages and Technigues II</h5>
@@ -427,7 +427,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="cis160Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Mathematical Foundations of Computer Science</h5>
@@ -453,7 +453,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="econ010Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Introduction to Economics for Business</h5>
@@ -477,7 +477,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="fnce100Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Corporate Finance</h5>
@@ -504,16 +504,16 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="fnce101Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">FMonetary Economics and the Global Economy</h5>
+                    <h5 class="modal-title">Monetary Economics and the Global Economy</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Very long go on their <a href="https://catalog.upenn.edu/undergraduate/courses/fnce/">website</a></p>
+                    <p>Very long go on their <a href="https://catalog.upenn.edu/undergraduate/courses/fnce/" target="_blank">website</a></p>
                     <p>
                         Pre-Reqs:ECON 010 or ECON 001 and ECON 002 and MATH 104 or MATH 110. 
                         Students cannot receive credit for both FNCE 101 and ECON 102. WHARTON STUDENTS ARE REQUIRED TO TAKE FNCE 101
@@ -526,7 +526,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="math104Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Calculus, Part I</h5>
@@ -548,7 +548,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="stat101Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Introductory Business Statistics</h5>
@@ -572,7 +572,7 @@
         </div>
     </div>
     <div class="modal" tabindex="-1" role="dialog" id="stat102Modal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Introductory Business Statistics</h5>
