--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 ACCT 101
                             </h3>
                             <h6>
-                                Description
+                                Accounting, where you learn how to manage people's money
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#acct101Modal" data-toggle="modal">
                                 More Details...
@@ -86,7 +86,7 @@
                                 ACCT 102
                             </h3>
                             <h6>
-                                Description
+                                Part 2, where you apply it to companies
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#acct102Modal" data-toggle="modal">
                                 More Details...
@@ -104,7 +104,7 @@
                                 CIS 110
                             </h3>
                             <h6>
-                                Description
+                                An intro to computer languages I don't know
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#cis110Modal" data-toggle="modal">
                                 More Details...
@@ -124,7 +124,7 @@
                                 CIS 120
                             </h3>
                             <h6>
-                                Description
+                                CS, but software design
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#cis120Modal" data-toggle="modal">
                                 More Details...
@@ -142,7 +142,7 @@
                                 CIS 121
                             </h3>
                             <h6>
-                                Description
+                                Data structures galore
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#cis121Modal" data-toggle="modal">
                                 More Details...
@@ -160,7 +160,7 @@
                                 CIS 160
                             </h3>
                             <h6>
-                                Description
+                                Math, but computers
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#cis160Modal" data-toggle="modal">
                                 More Details...
@@ -180,7 +180,7 @@
                                 ECON 010
                             </h3>
                             <h6>
-                                Description
+                                Micro, Macro, a lot of modeling
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#econ010Modal" data-toggle="modal">
                                 More Details...
@@ -198,7 +198,7 @@
                                 FNCE 100
                             </h3>
                             <h6>
-                                Description
+                                How to deal with money, but for businesses
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#fnce100Modal" data-toggle="modal">
                                 More Details...
@@ -216,7 +216,7 @@
                                 FNCE 101
                             </h3>
                             <h6>
-                                Description
+                                Macroeconomics + policy
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#fnce101Modal" data-toggle="modal">
                                 More Details...
@@ -236,7 +236,7 @@
                                 MATH 104
                             </h3>
                             <h6>
-                                Description
+                                Extra hard high school calc
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#math104Modal" data-toggle="modal">
                                 More Details...
@@ -254,7 +254,7 @@
                                 STAT 101
                             </h3>
                             <h6>
-                                Description
+                                Business focused probability
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#stat101Modal" data-toggle="modal">
                                 More Details...
@@ -272,7 +272,7 @@
                                 STAT 102
                             </h3>
                             <h6>
-                                Description
+                                Part 2, but extra mathy
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#stat102Modal" data-toggle="modal">
                                 More Details...
@@ -333,9 +333,6 @@
                         internal operations. What you learn in this course will help you understand the operations of your 
                         future employer (and enable you to be more successful at your job), and help you understand other 
                         companies you encounter in your role as competitor, consultant, or investor.
-                    </p>
-                    <p>
-                        Pre-Reqs: 
                     </p>
                 </div>
                 <div class="modal-footer">
