--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
     <script src="transition.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Source+Sans+Pro:200|Dosis" rel="stylesheet">
 
 </head>
 
@@ -68,7 +67,7 @@
                                 ACCT 101
                             </h3>
                             <h6>
-                                Accounting, where you learn how to manage people's money
+                                How to manage people's money
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#acct101Modal" data-toggle="modal">
                                 More Details...
@@ -86,7 +85,7 @@
                                 ACCT 102
                             </h3>
                             <h6>
-                                Part 2, where you apply it to companies
+                                Part 2, but specifically companies
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#acct102Modal" data-toggle="modal">
                                 More Details...
@@ -104,7 +103,7 @@
                                 CIS 110
                             </h3>
                             <h6>
-                                An intro to computer languages I don't know
+                                A new computer language. So many
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#cis110Modal" data-toggle="modal">
                                 More Details...
@@ -198,7 +197,7 @@
                                 FNCE 100
                             </h3>
                             <h6>
-                                How to deal with money, but for businesses
+                                How to deal with money, but business
                             </h6>
                             <button type="button" class="btn btn-light modalTrigger" data-target="#fnce100Modal" data-toggle="modal">
                                 More Details...
