--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <script src="transition.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    
+    <link rel="icon" href="shield.png" />
 
 </head>
 
